++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject 0.9.11
================

* Two bug in SQLiteConnection.columnsFromSchema() were fixed: use
  sqlmeta.idName instead of 'id'; convert default 'NULL' to None.

SQLObject 0.9.10
================

Released 6 May 2009

* Another unicode-related patch for MySQL; required because different
  versions of MySQLdb require different handling::

   - MySQLdb < 1.2.1: only ascii
   - MySQLdb = 1.2.1: only unicode
   - MySQLdb > 1.2.1: both ascii and unicode

* Setup requires FormEncode version 1.1.1+.

* A minor bug was fixed in creating a DecimalValidator - pass the column name
  to it.

* A bug was fixed in InheritableIteration - pass connection to child
  klass.select().

* A bug was fixed in PostgresConnection.columnsFromSchema() - foreign keys
  are now recognized and created as proper ForeignKey with correct
  column name and table name.

* Bugs in PostgresConnection and MSSQLConnection related to properties was
  fixed. A note for developers: from now on properties in DBConnection
  classes are forbidden as they don't work with Transaction -
  Transaction.__getattr__() cannot properly wrap 'self' so a property is
  called with wrong 'self'.

* Transaction instances now explicitly raises TypeError on close() -
  without this calling Transaction.close() calls connection.close() which
  is wrong.

* A bug in SQLiteConnection.columnsFromSchema() that led to an infinite
  loop was fixed.

SQLObject 0.9.9
===============

Released 8 Dec 2008.

* Backported from the trunk: under MySQL use the connection's dbEncoding
  instead of ascii when converting a unicode value from python to database
  for a StringCol.

* Fixed createSQL constrains generation under MySQL when the table's name
  includes the database's name (contains a dot).

SQLObject 0.9.8
===============

Released 1 Dec 2008.

* Changed interpretation of strings in the DB URI for boolean parameters: